restore consistent design of badges

--- a/client/lampenhaus/src/components/CorrespondentList/CorrespondentList.css
+++ b/client/lampenhaus/src/components/CorrespondentList/CorrespondentList.css
@@ -48,3 +48,11 @@
 .maximized .top-correspondents .card-body {
     height: auto;
 }
+
+.list-badge.small.community {
+    width: 102px;
+}
+
+.list-badge.small.role {
+    width: 63px;
+}
