defaulting in backend to -1 if -1, not displayed in correspondentinfo if -1, displayed as UNK in correspondentlist fixed top terms list refactored neo4j request for correspondents

--- a/client/lampenhaus/src/components/CorrespondentList/CorrespondentList.css
+++ b/client/lampenhaus/src/components/CorrespondentList/CorrespondentList.css
@@ -49,10 +49,10 @@
     height: auto;
 }
 
-.list-badge.small.community {
-    width: 102px;
+.filter-badge.small.community {
+    width: 107px;
 }
 
-.list-badge.small.role {
+.filter-badge.small.role {
     width: 63px;
 }
