added community and role label to correspondentsearch, similar to correspondentlist

--- a/client/lampenhaus/src/components/CorrespondentSearchView/CorrespondentSearchView.css
+++ b/client/lampenhaus/src/components/CorrespondentSearchView/CorrespondentSearchView.css
@@ -21,3 +21,13 @@
 .correspondent-search-view .card-body > div {
     width: 50%;
 }
+
+.filter-badge.small.header-community {
+    width: 140px;
+    display: inline-block;
+}
+
+.filter-badge.small.header-role {
+    width: 80px;
+    display: inline-block;
+}
