add keyphrases to email view and overview

--- a/client/lampenhaus/src/components/EmailListView/EmailListView.css
+++ b/client/lampenhaus/src/components/EmailListView/EmailListView.css
@@ -14,7 +14,7 @@
     grid-area: 3 / 1 / 4 / 2;
 }
 
-.email-list-view .top-phrases-container {
+.email-list-view .keyphrases-container {
     grid-area: 1 / 2 / 2 / 3;
 }
 
