--- a/client/lampenhaus/src/components/CorrespondentView/CorrespondentView.css
+++ b/client/lampenhaus/src/components/CorrespondentView/CorrespondentView.css
@@ -29,7 +29,7 @@
     top: 3px;
 }
 
-.correspondent-view .top-phrases-container {
+.correspondent-view .keyphrases-container {
     grid-area: 3 / 1 / 5 / 2;
 }
 
