--- a/client/lampenhaus/src/components/CorrespondentView/CorrespondentView.css
+++ b/client/lampenhaus/src/components/CorrespondentView/CorrespondentView.css
@@ -20,6 +20,7 @@
 
 .correspondent-view .timeline-container {
     grid-area: 4 / 2 / 5 / 3;
+    overflow: visible !important;
 }
 
 .categories-card .card-body {
